--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -13,6 +13,7 @@
     <title>Tsallagti Tour</title>
 </head>
 <body>
+<div class="overflow"></div>
 <header class="header" id="header">
     <div class="header__desctop">
         <div class="header__aside container">
@@ -105,7 +106,7 @@
             <div class="container">
                 <nav class="header__nav">
                     <ul class="header__list">
-                        <li class="header__item"><a href="index.html" class="heder__link">Главная</a></li>
+                        <li class="header__item"><a href="index.html" class="heder__link heder__link-active">Главная</a></li>
                         <li class="header__item"><a href="tours.html" class="heder__link">Этно-Тур</a></li>
                         <li class="header__item"><a href="active.html" class="heder__link">Актив-Тур</a></li>
                         <li class="header__item"><a href="#" class="heder__link">Тур номер 3</a></li>
@@ -116,7 +117,7 @@
     </div>
     <nav class="navigation">
         <div id="menuToggle">
-            <input type="checkbox"/>
+            <input type="checkbox" id="check-menu-mobile">
             <span></span>
             <span></span>
             <span></span>
@@ -163,8 +164,8 @@
                 <li class="best-tour__item best-tour__first">
                     <div class="blog-card spring-fever grand-tur">
                         <div class="title-content">
-                            <h3><a href="#">Этно тур</a></h3>
-                            <div class="intro"><a href="tours.html">3 000р</a></div>
+                            <h3><a href="#">Этно-Тур</a></h3>
+                            <div class="intro">Выходного дня</div>
                         </div>
                         <div class="card-info">
                             За 2 дня в компании творческих людей мы посетим самые запоминающиеся места, ущелья,
@@ -178,8 +179,8 @@
                 <li class="best-tour__item best-tour__second">
                     <div class="blog-card spring-fever pohod">
                         <div class="title-content">
-                            <h3><a href="#">Поход на край света</a></h3>
-                            <div class="intro"><a href="#">Inspiration</a></div>
+                            <h3><a href="#">Актив-Тур</a></h3>
+                            <div class="intro">Выходного дня</div>
                         </div>
                         <div class="card-info">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
@@ -208,10 +209,37 @@
             </ul>
         </div>
     </section>
+<!--    <section class="contacts" id="contacts">-->
+<!--        <div class="contacts__container container">-->
+<!--            <div class="container__left">-->
+<!--                <h2 class="contacts__title title">-->
+<!--                    Контакты-->
+<!--                </h2>-->
+<!--                <form action="https://jsonplaceholder.typicode.com/posts" method="post" class="contacts-form">-->
+<!--                    <div class="contacts-form__block">-->
+<!--                        <input type="text" class="contacts-form__name">-->
+<!--                        <input type="text" class="contacts-form__last-name">-->
+<!--                    </div>-->
+<!--                    <div class="contacts-form__block">-->
+<!--                        <input type="email" class="contacts-form__email">-->
+<!--                        <input type="number" class="contacts-form__last-number">-->
+<!--                    </div>-->
+<!--                    <div class="contacts-form__block">-->
+<!--                        <textarea name="contact-message" ></textarea>-->
+<!--                    </div>-->
+<!--                </form>-->
+<!--            </div>-->
+<!--            <div class="container__right">-->
+
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 </main>
 
 
+
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="js/menu-hidden.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
