--- a/active.html
+++ b/active.html
@@ -13,6 +13,7 @@
     <title>Актив-Тур</title>
 </head>
 <body>
+<div class="overflow"></div>
 <header class="header" id="header">
     <div class="header__desctop">
         <div class="header__aside container">
@@ -114,7 +115,7 @@
     </div>
     <nav class="navigation">
         <div id="menuToggle">
-            <input type="checkbox"/>
+            <input type="checkbox" id="check-menu-mobile">
             <span></span>
             <span></span>
             <span></span>
