--- a/tours.html
+++ b/tours.html
@@ -13,6 +13,7 @@
     <title>Этно-Тур</title>
 </head>
 <body>
+<div class="overflow"></div>
 <header class="header" id="header">
     <div class="header__desctop">
         <div class="header__aside container">
@@ -115,7 +116,7 @@
     </div>
     <nav class="navigation">
         <div id="menuToggle">
-            <input type="checkbox"/>
+            <input type="checkbox" id="check-menu-mobile">
             <span></span>
             <span></span>
             <span></span>
