--- a/active.html
+++ b/active.html
@@ -612,13 +612,22 @@
                     <input type="text" name="price" class="tour__price-value" value="2000" readonly>
                 </label>
                 <label>
-                    <input type="text" name="name" placeholder="Ваш имя" maxlength="50" required>
+                    <input type="text" name="name" placeholder="Ваше имя" maxlength="50" required>
                 </label>
                 <label>
                     <input type="email" name="mail" placeholder="Ваш e-mail" maxlength="50" required>
                 </label>
                 <label>
                     <input type="tel" name="tel" class="input__tel" placeholder="Ваш телефон" required>
+                </label>
+                <label>
+                    <select name="date" class="input__date-illusion form__select" required>
+                        <option value="0">Выберите дату</option>
+                        <option value="1">03.06.2021</option>
+                        <option value="2">19.06.2021</option>
+                        <option value="3">01.07.2021</option>
+                        <option value="4">20.07.2021</option>
+                    </select>
                 </label>
                 <!--                дата для ручного воода-->
                 <!--                <label class="lable__input-date">-->
