--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           content="Туры в Осетию, отдых в Осетии, мертвый город, даргавс, тур Осетия, Кавказ тур, тур в горах, отдых в горах">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="preload" as="style" href="css/fonts.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/cards.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Tsallagti Tour</title>
@@ -183,13 +183,13 @@
                 <li class="best-tour__item best-tour__second">
                     <div class="blog-card spring-fever pohod">
                         <div class="title-content">
-                            <h3><a href="#">Актив-Тур</a></h3>
+                            <h3><a href="active.html">Актив-Тур</a></h3>
                             <div class="intro">Выходного дня</div>
                         </div>
                         <div class="card-info">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Ut enim ad minim...
-                            <a href="#">Подробнее</a>
+                            <a href="active.html">Подробнее</a>
                         </div>
                         <div class="gradient-overlay"></div>
                         <div class="color-overlay"></div>
@@ -219,7 +219,7 @@
                 <div class="contacts__left-wrap">
                     <div class="contacts__left-content">
                         <h2 class="contacts__title title">
-                            Контакты
+                            Обратная связь
                         </h2>
                         <form action="https://jsonplaceholder.typicode.com/posts" method="post" class="contacts-form">
                             <div class="contacts-form__block">
@@ -249,7 +249,6 @@
                             </div>
                             <div class="contscts-btn__block">
                                 <button class="contscts-btn btn btn__orange">Отправить</button>
-                                <button class="contacts-btn-transp btn">Послание</button>
                             </div>
                         </form>
                     </div>
@@ -263,11 +262,27 @@
     </section>
     <section class="phone-number">
         <div class=".phone-number__container container">
+            <div class="accordion-item">
+                <div class="accordion-item__trigger">
+                    Trigger 1
+                </div>
+                <div class="accordion-item__content">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi inventore ipsa neque non quasi repellendus.
+                </div>
+            </div>
+            <div class="accordion-item">
+                <div class="accordion-item__trigger">
+                    Trigger 2
+                </div>
+                <div class="accordion-item__content">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi inventore ipsa neque non quasi repellendus.
+                </div>
+            </div>
 
         </div>
     </section>
 </main>
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="js/swiper-bundle.min.js"></script>
 <script src="js/menu-hidden.js"></script>
 <script src="js/script.js"></script>
 </body>
