--- a/tours.html
+++ b/tours.html
@@ -514,7 +514,7 @@
         </div>
     </section>
     <section class="tour-program">
-        <div class="container">
+        <div class="tour__container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
                     <h2 class="tour-program__title tour__title">
@@ -560,7 +560,7 @@
         </div>
     </section>
     <section class="tour-about" id="tour-about">
-        <div class="container">
+        <div class="tour__container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
                     <h2 class="tour-about__title tour__title">
@@ -595,7 +595,7 @@
         </div>
     </section>
     <section class="tour__include" id="tour__include">
-        <div class="container">
+        <div class="tour__container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
                     <h2 class="tour__title">
@@ -648,7 +648,7 @@
         </div>
     </section>
     <section class="tour__notinclude" id="tour__notinclude">
-        <div class="container">
+        <div class="tour__container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
                     <h2 class="tour__title">Что не входит в стоимость</h2>
@@ -691,7 +691,7 @@
         </div>
     </section>
     <section class="tour__price" id="tour__price">
-        <div class="container">
+        <div class="tour__container">
             <form action="https://jsonplaceholder.typicode.com/posts" method="post">
                 <div class="segment">
                     <h2 class="tour__title">Бронирование тура</h2>
@@ -761,7 +761,7 @@
         </div>
     </section>
     <section class="contacts" id="contacts">
-        <div class="contacts__container container">
+        <div class="contacts__container tour__container">
             <div class="contacts__left">
                 <div class="contacts__left-wrap">
                     <div class="contacts__left-content">
