--- a/tours.html
+++ b/tours.html
@@ -373,8 +373,8 @@
                 </div>
             </div>
             <div class="tour-program">
-                <h2 class="tour__title">Топ локации тура</h2>
-                <div class="tour__content">
+                <h2 class="tour__title title-vis">Топ локации тура</h2>
+                <div class="tour__content ">
                     <div class="tour__item">
                         <div class="tour__name">
                             <h3>Кармадонское ущелье</h3>
@@ -514,7 +514,7 @@
         </div>
     </section>
     <section class="tour-program">
-        <div class="tour__container">
+        <div class="container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
                     <h2 class="tour-program__title tour__title">
@@ -560,7 +560,7 @@
         </div>
     </section>
     <section class="tour-about" id="tour-about">
-        <div class="tour__container">
+        <div class="container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
                     <h2 class="tour-about__title tour__title">
@@ -595,7 +595,7 @@
         </div>
     </section>
     <section class="tour__include" id="tour__include">
-        <div class="tour__container">
+        <div class="container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
                     <h2 class="tour__title">
@@ -603,7 +603,7 @@
                     </h2>
                 </div>
                 <div class="accordion__item-body">
-                    <ul class="accordion__item-body-content">
+                    <div class="accordion__item-body-content">
                         <ul class="tour__include__list">
                             <li class="tour__include__item">
                                 <div class="tour__include-item__img" style="background-image:url(img/price/service_4.jpg)"></div>
@@ -642,13 +642,13 @@
                                 </div>
                             </li>
                         </ul>
-                    </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="tour__notinclude" id="tour__notinclude">
-        <div class="tour__container">
+        <div class="container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
                     <h2 class="tour__title">Что не входит в стоимость</h2>
@@ -691,10 +691,10 @@
         </div>
     </section>
     <section class="tour__price" id="tour__price">
-        <div class="tour__container">
+        <div class="container">
             <form action="https://jsonplaceholder.typicode.com/posts" method="post">
-                <div class="segment">
-                    <h2 class="tour__title">Бронирование тура</h2>
+                <div class="segment-title">
+                    <h2 class="tour__title title-vis">Бронирование тура</h2>
                 </div>
                 <label class="form-price__wrap">
                     <h4 class="form__title">Цена на человека:</h4>
@@ -761,7 +761,7 @@
         </div>
     </section>
     <section class="contacts" id="contacts">
-        <div class="contacts__container tour__container">
+        <div class="contacts__container container">
             <div class="contacts__left">
                 <div class="contacts__left-wrap">
                     <div class="contacts__left-content">
