--- a/tours.html
+++ b/tours.html
@@ -517,7 +517,7 @@
         <div class="container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
-                    <h2 class="tour-program__title tour__title">
+                    <h2 class="tour-accordion__title tour__title">
                         Программа тура
                     </h2>
                 </div>
@@ -563,7 +563,7 @@
         <div class="container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
-                    <h2 class="tour-about__title tour__title">
+                    <h2 class="tour-accordion__title tour__title">
                         Подробнее о туре
                     </h2>
                 </div>
@@ -598,7 +598,7 @@
         <div class="container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
-                    <h2 class="tour__title">
+                    <h2 class="tour-accordion__title tour__title">
                         Что входит в стоимость
                     </h2>
                 </div>
@@ -630,13 +630,13 @@
                                 </div>
                             </li>
                             <li class="tour__include__item">
-                                <div class="tour__include-item__img" style="background-image:url(img/price/service_4.jpg)"></div>
+                                <div class="tour__include-item__img" style="background-image:url(img/price/service_5.jpg)"></div>
                                 <div class="tour__include-item__descr">
                                     Мастер класс по приготовлению осетинских пирогов
                                 </div>
                             </li>
                             <li class="tour__include__item">
-                                <div class="tour__include-item__img" style="background-image:url(img/price/service_4.jpg)"></div>
+                                <div class="tour__include-item__img" style="background-image:url(img/price/service_6.jpg)"></div>
                                 <div class="tour__include-item__descr">
                                     Входы в музеи
                                 </div>
@@ -651,7 +651,7 @@
         <div class="container">
             <div class="accordion__item">
                 <div class="accordion__item-header">
-                    <h2 class="tour__title">Что не входит в стоимость</h2>
+                    <h2 class="tour-accordion__title tour__title">Что не входит в стоимость</h2>
                 </div>
                 <div class="accordion__item-body">
                     <div class="accordion__item-body-content">
