--- a/test.html
+++ b/test.html
@@ -138,9 +138,24 @@
     <section class="hero" id="hero">
         <div class="swiper-container hero__slider">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background-image:  url('img/slide-start-1.webp')"></div>
-                <div class="swiper-slide" style="background-image:  url('img/slide-start-2.webp')"></div>
-                <div class="swiper-slide" style="background-image:  url('img/slide-start-3.webp')"></div>
+                <div class="swiper-slide">
+                    <picture class="1">
+                        <source srcset="img/slide-start-1.webp" media="(min-width: 769px)">
+                        <img src="img/slide_1_mobile.webp" alt="MDN">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                     <picture class="2">
+                        <source srcset="img/slide-start-2.webp" media="(min-width: 769px)">
+                        <img src="img/slide_2_mobile.webp" alt="MDN">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                     <picture class="3">
+                        <source srcset="img/slide-start-3.webp" media="(min-width: 769px)">
+                        <img src="img/slide_3_mobile.webp" alt="MDN">
+                    </picture>
+                </div>
 
                 <!-- Buttons -->
                 <!--            <div class="swiper-button-prev"></div>-->
