--- a/tours.html
+++ b/tours.html
@@ -114,7 +114,7 @@
                         <li class="header__item"><a href="tours.html"
                                                     class="heder__link heder__link-active">Этно-Тур</a></li>
                         <li class="header__item"><a href="active.html" class="heder__link">Актив-Тур</a></li>
-                        <li class="header__item"><a href="#" class="heder__link">Тур номер 3</a></li>
+                        <li class="header__item"><a href="tours.html" class="heder__link">Тур номер 3</a></li>
                     </ul>
                 </nav>
             </div>
@@ -130,7 +130,7 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="tours.html">Этно-Тур</a></li>
                 <li><a href="active.html">Актив-Тур</a></li>
-                <li><a href="#">Тур номер 3</a></li>
+                <li><a href="tours.html">Тур номер 3</a></li>
             </ul>
         </div>
     </nav>
