--- a/active.html
+++ b/active.html
@@ -109,7 +109,7 @@
                         <li class="header__item"><a href="index.html" class="heder__link">Главная</a></li>
                         <li class="header__item"><a href="tours.html" class="heder__link">Этно-Тур</a></li>
                         <li class="header__item"><a href="active.html" class="heder__link heder__link-active">Актив-Тур</a></li>
-                        <li class="header__item"><a href="#" class="heder__link">Тур номер 3</a></li>
+                        <li class="header__item"><a href="test.html" class="heder__link">Тур номер 3</a></li>
                     </ul>
                 </nav>
             </div>
@@ -125,7 +125,7 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="tours.html">Этно-Тур</a></li>
                 <li><a href="active.html">Актив-Тур</a></li>
-                <li><a href="#">Тур номер 3</a></li>
+                <li><a href="test.html">Тур номер 3</a></li>
             </ul>
         </div>
     </nav>
