--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </li>
                         <li class="header__item"><a href="tours.html" class="heder__link">Этно-Тур</a></li>
                         <li class="header__item"><a href="active.html" class="heder__link">Актив-Тур</a></li>
-                        <li class="header__item"><a href="#" class="heder__link">Тур номер 3</a></li>
+                        <li class="header__item"><a href="test.css" class="heder__link">Тур номер 3</a></li>
                     </ul>
                 </nav>
             </div>
@@ -129,7 +129,7 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="tours.html">Этно-Тур</a></li>
                 <li><a href="active.html">Актив-Тур</a></li>
-                <li><a href="#">Тур номер 3</a></li>
+                <li><a href="test.html">Тур номер 3</a></li>
             </ul>
         </div>
     </nav>
@@ -260,25 +260,6 @@
         </div>
     </section>
     <section class="phone-number">
-        <div class=".phone-number__container container">
-            <div class="accordion-item">
-                <div class="accordion-item__trigger">
-                    Trigger 1
-                </div>
-                <div class="accordion-item__content">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi inventore ipsa neque non quasi repellendus.
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item__trigger">
-                    Trigger 2
-                </div>
-                <div class="accordion-item__content">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi inventore ipsa neque non quasi repellendus.
-                </div>
-            </div>
-
-        </div>
     </section>
 </main>
 <script src="js/swiper-bundle.min.js"></script>
