--- a/test.html
+++ b/test.html
@@ -141,7 +141,7 @@
                 <div class="swiper-slide">
                     <picture class="1">
                         <source srcset="img/slide-start-1.webp" media="(min-width: 769px)">
-                        <img src="img/slide_1_mobile.webp" alt="MDN">
+                        <img src="img/pohod.jpeg" alt="MDN">
                     </picture>
                 </div>
                 <div class="swiper-slide">
