--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </li>
                         <li class="header__item"><a href="tours.html" class="heder__link">Этно-Тур</a></li>
                         <li class="header__item"><a href="active.html" class="heder__link">Актив-Тур</a></li>
-                        <li class="header__item"><a href="test.css" class="heder__link">Тур номер 3</a></li>
+                        <li class="header__item"><a href="test.html" class="heder__link">Тур номер 3</a></li>
                     </ul>
                 </nav>
             </div>
@@ -138,9 +138,25 @@
     <section class="hero" id="hero">
         <div class="swiper-container hero__slider">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background-image:  url('img/slide-start-1.webp')"></div>
-                <div class="swiper-slide" style="background-image:  url('img/slide-start-2.webp')"></div>
-                <div class="swiper-slide" style="background-image:  url('img/slide-start-3.webp')"></div>
+                <div class="swiper-slide">
+                    <picture class="1">
+                        <source srcset="img/slide-start-1.webp" media="(min-width: 769px)">
+                        <img src="img/slide_1_mobile.webp" alt="MDN">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="2">
+                        <source srcset="img/slide-start-2.webp" media="(min-width: 769px)">
+                        <img src="img/slide_2_mobile.webp" alt="MDN">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="3">
+                        <source srcset="img/slide-start-3.webp" media="(min-width: 769px)">
+                        <img src="img/slide_3_mobile.webp" alt="MDN">
+                    </picture>
+                </div>
+
                 <!-- Buttons -->
                 <!--            <div class="swiper-button-prev"></div>-->
                 <!--            <div class="swiper-button-next"></div>-->
@@ -148,9 +164,9 @@
         </div>
         <div class="swiper-wrap">
             <div class="swiper-wrap__container">
-                <h1 class="swiper-container__title">Лучшие туры</h1>
+                <h1 class="swiper-container__title">Актив-тур</h1>
                 <p class="swiper-container__text">Только с нами</p>
-                <a href="#" class="swuper__btn btn btn__orange">Подробнее</a>
+                <a href="#tour__price" class="swuper__btn btn btn__orange">Забронировать</a>
             </div>
         </div>
     </section>
