--- a/tours.html
+++ b/tours.html
@@ -139,9 +139,24 @@
     <section class="hero" id="hero">
         <div class="swiper-container hero__slider">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background-image:  url('img/slide-start-1.webp')"></div>
-                <div class="swiper-slide" style="background-image:  url('img/slide-start-2.webp')"></div>
-                <div class="swiper-slide" style="background-image:  url('img/slide-start-3.webp')"></div>
+                <div class="swiper-slide">
+                    <picture class="1">
+                        <source srcset="img/slide-start-1.webp" media="(min-width: 769px)">
+                        <img src="img/slide_1_mobile.webp" alt="MDN">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="2">
+                        <source srcset="img/slide-start-2.webp" media="(min-width: 769px)">
+                        <img src="img/slide_2_mobile.webp" alt="MDN">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="3">
+                        <source srcset="img/slide-start-3.webp" media="(min-width: 769px)">
+                        <img src="img/slide_3_mobile.webp" alt="MDN">
+                    </picture>
+                </div>
 
                 <!-- Buttons -->
                 <!--            <div class="swiper-button-prev"></div>-->
@@ -150,7 +165,7 @@
         </div>
         <div class="swiper-wrap">
             <div class="swiper-wrap__container">
-                <h1 class="swiper-container__title">Этно-тур</h1>
+                <h1 class="swiper-container__title">Актив-тур</h1>
                 <p class="swiper-container__text">Только с нами</p>
                 <a href="#tour__price" class="swuper__btn btn btn__orange">Забронировать</a>
             </div>
@@ -694,7 +709,7 @@
         <div class="container">
             <form action="https://jsonplaceholder.typicode.com/posts" method="post">
                 <div class="segment-title">
-                    <h2 class="tour__title title-vis">Бронирование тура</h2>
+                    <h2 class="tour__price__title tour__title title-vis">Бронирование тура</h2>
                 </div>
                 <label class="form-price__wrap">
                     <h4 class="form__title">Цена на человека:</h4>
@@ -812,6 +827,7 @@
         </div>
     </section>
 </main>
+
 <script src="js/swiper-bundle.min.js"></script>
 <script src="js/script.js"></script>
 <script src="js/menu-hidden.js"></script>
