--- a/test.html
+++ b/test.html
@@ -828,7 +828,7 @@
 </main>
 
 <script src="js/form-message.js"></script>
-<script src="js/swiper-bundle.min.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script src="js/script.js"></script>
 <script src="js/menu-hidden.js"></script>
 </body>
