--- a/tours.html
+++ b/tours.html
@@ -141,20 +141,20 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <picture class="1">
-                        <source srcset="img/slide-start-1.webp" media="(min-width: 769px)">
-                        <img src="img/slide_1_mobile.webp" alt="MDN">
+                        <source srcset="img/slide_3_mobile.jpg" media="(min-width: 769px)">
+                        <img src="img/slide_3_mobile.jpg" alt="MDN">
                     </picture>
                 </div>
                 <div class="swiper-slide">
                     <picture class="2">
-                        <source srcset="img/slide-start-2.webp" media="(min-width: 769px)">
-                        <img src="img/slide_2_mobile.webp" alt="MDN">
+                        <source srcset="img/slide_3_mobile.jpg" media="(min-width: 769px)">
+                        <img src="img/slide_3_mobile.jpg" alt="MDN">
                     </picture>
                 </div>
                 <div class="swiper-slide">
                     <picture class="3">
-                        <source srcset="img/slide-start-3.webp" media="(min-width: 769px)">
-                        <img src="img/slide_3_mobile.webp" alt="MDN">
+                        <source srcset="img/slide_3_mobile.jpg" media="(min-width: 769px)">
+                        <img src="img/slide_3_mobile.jpg" alt="MDN">
                     </picture>
                 </div>
 
